# hep_rag_service

./: .flake8  .gitignore  INSTALLATION_COMPLETE.md  Makefile  README.md  interactive_rag.py  pyproject.toml  requirements.txt  test_agents_with_sources.py  test_mcp_agents.py
agents/: README.md  __init__.py  example_usage.py  langchain_indexer.py  root_agents.py
etl/: __init__.py  download_root_docs.sh  index_root_docs.py  test_url_generation.py
etl/geant4/: __init__.py  download_geant4_docs.py  download_geant4_docs.sh  download_geant4_doxygen.py  index_geant4_docs.py  index_geant4_doxygen.py  search_geant4_docs.py  search_geant4_doxygen.py  test_search.py
etl/geant4/tests/: __init__.py  test_doxygen_search.py  test_search.py
etl/root/: __init__.py  download_root_docs.py  index_root_docs.py  references.py  search_root_docs.py  test_search.py  validate_urls.py
etl/root/tests/: __init__.py  example_extraction.py  test_content_quality.py  test_method_extraction.py  test_search.py  test_url_generation.py
hep_mcp_doc/: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
hep_mcp_doc/hep_mcp_doc/: __init__.py  server.py  server_with_agents.py
servers/: .env  docker-compose.yml  k8s-elasticsearch.yaml
