[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hep-rag-service"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system for High Energy Physics documentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Omar Zapata", email = "Omar.Zapata@cern.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "elasticsearch>=8.0.0,<9.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "autoflake>=2.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/omazapa/hep_rag_service"
Repository = "https://github.com/omazapa/hep_rag_service"
Issues = "https://github.com/omazapa/hep_rag_service/issues"

[project.scripts]
# ROOT commands
hep-rag-download-root = "etl.root.download_root_docs:main"
hep-rag-index-root = "etl.root.index_root_docs:main"
hep-rag-search-root = "etl.root.search_root_docs:main"
hep-rag-validate-root-urls = "etl.root.validate_urls:main"
# Geant4 Sphinx commands
hep-rag-download-geant4 = "etl.geant4.download_geant4_docs:main"
hep-rag-index-geant4 = "etl.geant4.index_geant4_docs:main"
hep-rag-search-geant4 = "etl.geant4.search_geant4_docs:main"
# Geant4 Doxygen commands
hep-rag-download-geant4-doxygen = "etl.geant4.download_geant4_doxygen:main"
hep-rag-index-geant4-doxygen = "etl.geant4.index_geant4_doxygen:main"
hep-rag-search-geant4-doxygen = "etl.geant4.search_geant4_doxygen:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*"]
exclude = ["etl.*.data*", "etl.*.tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = ["data", ".venv", "venv"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = true

[tool.pytest.ini_options]
testpaths = ["etl/root/tests", "etl/geant4/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=etl --cov-report=term-missing"
