[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hep-mcp-doc"
version = "0.1.0"
description = "MCP server for HEP documentation RAG testing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HEP RAG Service Team"}
]
keywords = ["mcp", "rag", "hep", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mcp[cli]>=0.1.0",
    "hep-rag-service",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
hep-mcp-doc = "hep_mcp_doc.server:main"
hep-mcp-doc-agents = "hep_mcp_doc.server_with_agents:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hep_mcp_doc*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
